# reqfiles

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  NEWS.rst  NEWS.txt  README.md  README.rst  TODO  Vagrantfile  pytest.ini  setup.cfg  setup.py  tox.ini
reqfiles/: __init__.py  classifiers.py  core.py  exceptions.py  parsers.py  setuptools.py  system.py  utils.py
requirements/: base.txt  tests.txt  tox.txt
tests/: common.py  conftest.py  test_classifiers.py  test_core.py  test_parser.py  test_setuptools.py  test_system.py  test_utils.py
tests/fixtures/: requirements.txt
