[metadata]
name = reqfiles
author = Rafael Durán Castañeda
author-email = rafadurancastaneda@gmail.com
summary = Python Requirement files helpers
description-file = README.rst
license = BSD
home-page = https://github.com/rafaduran/reqfiles
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: System :: Systems Administration
keywords =
    Pip
    Requirements
    Setuptools
    Distutils

[files]
packages = reqfiles
